--- a/website/public/css/sass/style.scss
+++ b/website/public/css/sass/style.scss
@@ -121,10 +121,11 @@ h1, h2, h3, h4, h5, h6 {
 
 /* overzicht tafels advanced */ 
 
-.client-icon {
+.client-logo {
   margin-left: 5px;
   margin-top: 5px;
-  
+  width : 15px;
+
 }
 
 .nopadding {
