--- a/website/public/css/stylesheets/style.css
+++ b/website/public/css/stylesheets/style.css
@@ -122,32 +122,33 @@ h1, h2, h3, h4, h5, h6 {
 
 /* overzicht tafels advanced */
 /* line 124, ../sass/style.scss */
-.client-icon {
+.client-logo {
   margin-left: 5px;
   margin-top: 5px;
+  width: 15px;
 }
 
-/* line 130, ../sass/style.scss */
+/* line 131, ../sass/style.scss */
 .nopadding {
   padding: 0 !important;
   margin: 0 !important;
 }
 
-/* line 135, ../sass/style.scss */
+/* line 136, ../sass/style.scss */
 #locationText {
   font-size: 0.8em;
 }
 
-/* line 141, ../sass/style.scss */
+/* line 142, ../sass/style.scss */
 .modal .modal-footer-table {
   padding-top: 15px;
 }
-/* line 144, ../sass/style.scss */
+/* line 145, ../sass/style.scss */
 .modal .modal-footer-table input, .modal .modal-footer-table select {
   margin-bottom: 15px;
   width: 50%;
 }
-/* line 152, ../sass/style.scss */
+/* line 153, ../sass/style.scss */
 .modal .choiseWindow .choise-block {
   position: relative;
   width: 80%;
@@ -155,22 +156,22 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 80%;
   border-radius: 5px;
 }
-/* line 160, ../sass/style.scss */
+/* line 161, ../sass/style.scss */
 .modal .choiseWindow .block-text {
   margin-bottom: 15px;
 }
 
-/* line 168, ../sass/style.scss */
+/* line 169, ../sass/style.scss */
 .dashboard-advanced {
   margin: 0px 15px 0px 15px;
 }
 
-/* line 172, ../sass/style.scss */
+/* line 173, ../sass/style.scss */
 .pointer {
   cursor: pointer !important;
 }
 
-/* line 175, ../sass/style.scss */
+/* line 176, ../sass/style.scss */
 .empty-block-advanced {
   position: relative;
   width: 100%;
@@ -182,16 +183,16 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
   border: 1px solid #d2d6de;
 }
-/* line 188, ../sass/style.scss */
+/* line 189, ../sass/style.scss */
 .empty-block-advanced:hover, .empty-block-advanced:focus {
   opacity: 0.5;
   cursor: pointer;
 }
-/* line 192, ../sass/style.scss */
+/* line 193, ../sass/style.scss */
 .empty-block-advanced:hover .button-clean i, .empty-block-advanced:focus .button-clean i {
   color: white;
 }
-/* line 199, ../sass/style.scss */
+/* line 200, ../sass/style.scss */
 .empty-block-advanced .button-clean i {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
@@ -208,7 +209,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 45px;
 }
 
-/* line 217, ../sass/style.scss */
+/* line 218, ../sass/style.scss */
 .filled-block-advanced {
   position: relative;
   width: 100%;
@@ -218,35 +219,35 @@ h1, h2, h3, h4, h5, h6 {
   border: 1px solid #333;
 }
 
-/* line 229, ../sass/style.scss */
+/* line 230, ../sass/style.scss */
 .table-block-advanced {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
 }
-/* line 233, ../sass/style.scss */
+/* line 234, ../sass/style.scss */
 .table-block-advanced:hover, .table-block-advanced:focus {
   opacity: 0.8;
 }
 
-/* line 239, ../sass/style.scss */
+/* line 240, ../sass/style.scss */
 .nohovereffect:hover, .nohovereffect:focus {
   opacity: 1;
 }
 
 /* block achtergronden */
-/* line 245, ../sass/style.scss */
+/* line 246, ../sass/style.scss */
 .wood {
   background-image: url("/images/wood.png");
 }
 
-/* line 249, ../sass/style.scss */
+/* line 250, ../sass/style.scss */
 .food {
   background: #a3b66c;
   background-image: url("/images/food.png");
   border: 1px solid #a3b66c;
 }
 
-/* line 255, ../sass/style.scss */
+/* line 256, ../sass/style.scss */
 .wall-horizontal {
   margin-top: 30%;
   margin-bottom: 30%;
@@ -254,14 +255,14 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 40% !important;
 }
 
-/* line 265, ../sass/style.scss */
+/* line 266, ../sass/style.scss */
 #decorationModal .wall-horizontal {
   margin-bottom: 20%;
   background-color: #333;
   padding-bottom: 40% !important;
 }
 
-/* line 273, ../sass/style.scss */
+/* line 274, ../sass/style.scss */
 .wall-vertical {
   width: 40% !important;
   margin: 0px auto;
@@ -269,48 +270,48 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* overzicht tafels  simple */
-/* line 281, ../sass/style.scss */
+/* line 282, ../sass/style.scss */
 .info-box {
   margin-bottom: 13px;
 }
 
-/* line 285, ../sass/style.scss */
+/* line 286, ../sass/style.scss */
 .subtitle-overzicht {
   font-size: 14px;
   font-weight: 300;
 }
-/* line 288, ../sass/style.scss */
+/* line 289, ../sass/style.scss */
 .subtitle-overzicht:hover {
   cursor: pointer;
 }
 
-/* line 296, ../sass/style.scss */
+/* line 297, ../sass/style.scss */
 .button-plus span i {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
   color: #747474;
 }
-/* line 303, ../sass/style.scss */
+/* line 304, ../sass/style.scss */
 .button-plus:hover span i, .button-plus:focus span i {
   color: white;
 }
 
-/* line 310, ../sass/style.scss */
+/* line 311, ../sass/style.scss */
 .info-box-empty {
   margin-top: -100px;
 }
-/* line 313, ../sass/style.scss */
+/* line 314, ../sass/style.scss */
 .info-box-empty input {
   margin-top: 9px;
 }
-/* line 317, ../sass/style.scss */
+/* line 318, ../sass/style.scss */
 .info-box-empty select {
   margin-top: 4px;
   margin-bottom: 0px;
 }
 
 /* forms */
-/* line 327, ../sass/style.scss */
+/* line 328, ../sass/style.scss */
 .box {
   background-color: white;
   border-top: 4px solid #ffe33b;
@@ -318,7 +319,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px 0px;
   padding-bottom: 10px;
 }
-/* line 335, ../sass/style.scss */
+/* line 336, ../sass/style.scss */
 .box .btn {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
@@ -331,51 +332,51 @@ h1, h2, h3, h4, h5, h6 {
   padding: 8px 18px 8px 18px;
   text-decoration: none;
 }
-/* line 348, ../sass/style.scss */
+/* line 349, ../sass/style.scss */
 .box .btn:hover {
   background: #333333;
   text-decoration: none;
 }
-/* line 354, ../sass/style.scss */
+/* line 355, ../sass/style.scss */
 .box .box-header {
   border-bottom: 1px solid #e0e0e0;
 }
-/* line 356, ../sass/style.scss */
+/* line 357, ../sass/style.scss */
 .box .box-header h4 {
   padding: 0px 10px;
 }
-/* line 361, ../sass/style.scss */
+/* line 362, ../sass/style.scss */
 .box form {
   margin: 20px;
 }
-/* line 365, ../sass/style.scss */
+/* line 366, ../sass/style.scss */
 .box .badge {
   background-color: #ffe33b;
   color: black;
 }
 
 /* dashboard */
-/* line 373, ../sass/style.scss */
+/* line 374, ../sass/style.scss */
 .black-bg {
   background-color: #262626;
 }
 
-/* line 377, ../sass/style.scss */
+/* line 378, ../sass/style.scss */
 .info-box i {
   color: white;
 }
 
-/* line 382, ../sass/style.scss */
+/* line 383, ../sass/style.scss */
 .title h2 {
   margin-top: 5px;
 }
-/* line 386, ../sass/style.scss */
+/* line 387, ../sass/style.scss */
 .title hr {
   border-top: 1px solid #a6a6a6;
 }
 
 /* bootstrap focus effect */
-/* line 394, ../sass/style.scss */
+/* line 395, ../sass/style.scss */
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
@@ -398,7 +399,7 @@ input[type="color"]:focus,
 }
 
 /* BUTTON */
-/* line 419, ../sass/style.scss */
+/* line 420, ../sass/style.scss */
 .custom-button {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
@@ -412,14 +413,14 @@ input[type="color"]:focus,
   text-decoration: none;
 }
 
-/* line 432, ../sass/style.scss */
+/* line 433, ../sass/style.scss */
 .custom-button:hover {
   background: #333333;
   text-decoration: none;
   color: #ffffff;
 }
 
-/* line 438, ../sass/style.scss */
+/* line 439, ../sass/style.scss */
 .alert {
   border-radius: 0px !important;
 }
